--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PONG</title>
+    <style>
+        #cadre {
+            display: flex;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <canvas id="pong" width="1000" height="600"></canvas>
+    <div id="cadre">
+        <canvas id="pong" ></canvas>
     </div>
     <script src="./ping.js"></script>
 </body>
